...
                    .textFieldStyle(.plain)
                    .foregroundColor(.black)
                    .frame(height: 50)
                    .padding(10)
                    .background(lightGrayHexColor)
                    .cornerRadius(20)
                    .accessibilityIdentifier("calorieTitleTextField")

                HStack {
                    
                    TextField("", text: $calorieCount)
                        .placeholder(when: calorieCount.isEmpty) {
                            Text("Caloires:").foregroundColor(.gray)
...
                        .foregroundColor(.black)
                        .frame(height: 50)
                        .padding(10)
                        .background(lightGrayHexColor)
                        .cornerRadius(20)
                        .keyboardType(UIKeyboardType.decimalPad)
                        .accessibilityIdentifier("calorieCountTextField")
                    
                    TextField("", text: $caloireQuantity)
                        .placeholder(when: caloireQuantity.isEmpty) {
                                Text("Qunatity:").foregroundColor(.gray)
                        }
                        .textFieldStyle(.plain)
                        .foregroundColor(.black)
                        .frame(height: 50)
                        .padding(10)
                        .background(lightGrayHexColor)
                        .cornerRadius(20)
                        .keyboardType(UIKeyboardType.decimalPad)
                        .accessibilityIdentifier("calorieQuantityTextField")
                }

                HStack {
                    if isTappedCell
                    {
                        Button(action: {
...
                            .frame(width: UIScreen.main.bounds.width / 2  - 40, height: 50)
                            .padding(10)
                            .background(Color.red)
                            .cornerRadius(20)
                            
                        }
                        .accessibilityIdentifier("deleteCalorieItemButton")
                        
                        Spacer(minLength: 10)
                    }
                    Button(action: {
                        let result: (success: Bool, message: String)
                        
...
                            .frame(width: UIScreen.main.bounds.width / 2 - 40, height: 50)
                            .padding(10)
                            .background(Color.green)
                            .cornerRadius(20)

                    }
                    .accessibilityIdentifier("saveCalorieItemButton")
                }
            }
                
            .padding(20)
            .cornerRadius(20)
            .background(colorScheme == .dark ? .white : .white)
...
