...
                    VStack(alignment: .leading) {
                        Text("\(statsTitleText) Stats")
                            .foregroundColor(colorScheme == .dark ? .white : .black)
                            .font(.custom("HelveticaNeue-Bold", size: 24))
                            .padding(.top, 100)
                            .padding(.leading, 20)
                            .accessibilityIdentifier("statsTitle")
                        
                        Spacer(minLength: 10)

                        VStack {

                            //upper
                            HStack {
                                VStack(alignment: .leading) {
                                    Text(String(totCalCount))
                                        .font(.custom("HelveticaNeue-Bold", size: 64))
                                        .foregroundColor(.init(orangeHexColor))
                                        .frame(alignment: .leading)
                                        .accessibilityIdentifier("totalCaloireCount")


                                    Text("Calories Consumed")
                                        .foregroundColor(colorScheme == .dark ? .white : .black)
                                        .font(.custom("HelveticaNeue-Bold", size: 15))
                                        .frame(alignment: .leading)
...
